--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
+peewee==3.17.0
 platformdirs==4.0.0
 pylint==3.0.2
 python-dotenv==1.0.0
