--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==4.0.0
+APScheduler==3.10.4
 astroid==3.0.1
 black==23.11.0
 certifi==2023.7.22
@@ -20,6 +21,9 @@ platformdirs==4.0.0
 pylint==3.0.2
 python-dotenv==1.0.0
 python-telegram-bot==20.6
+pytz==2023.3.post1
+six==1.16.0
 sniffio==1.3.0
 tomlkit==0.12.2
+tzlocal==5.2
 watchdog==3.0.0
