--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 BOT_TOKEN="YOUR_BOT_TOKEN"
-DATABASE="SQLITE3_DATABASE"
+MONGODB_CONNECTION_STRING="YOUR_MONGODB_CONNECTION_STRING"
+MONGODB_DATABASE_NAME="YOUR_MONGODB_DATABASE_NAME"
