--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2023.7.22
 click==8.1.7
 colorama==0.4.6
 dill==0.3.7
+dnspython==2.4.2
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.1
@@ -16,9 +17,9 @@ mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.11.2
-peewee==3.17.0
 platformdirs==4.0.0
 pylint==3.0.2
+pymongo==4.6.0
 python-dotenv==1.0.0
 python-telegram-bot==20.6
 pytz==2023.3.post1
